@@ -51,7 +51,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class HookStageExecutor {
@@ -281,8 +280,9 @@ public class HookStageExecutor {
                 StageWithHookType.forStage(stage));
 
         if (hook == null) {
-            throw new IllegalArgumentException(String.format(
-                    "Hooks execution plan contains unknown or disabled hook: stage=%s, hookId=%s", stage, hookId));
+            throw new IllegalArgumentException(
+                    "Hooks execution plan contains unknown or disabled hook: stage=%s, hookId=%s"
+                            .formatted(stage, hookId));
         }
     }
 
@@ -321,7 +321,7 @@ public class HookStageExecutor {
         final List<ExecutionGroup> combinedGroups = Stream.of(hostStageExecutionPlan, accountStageExecutionPlan)
                 .map(StageExecutionPlan::getGroups)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         return StageExecutionPlan.of(combinedGroups);
     }
