@@ -30,13 +30,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class BidderDepsAssembler<CFG extends BidderConfigurationProperties> {
 
-    private static final String ERROR_MESSAGE_TEMPLATE_FOR_DISABLED = "%s is not configured properly on this "
-            + "Prebid Server deploy. If you believe this should work, contact the company hosting the service "
-            + "and tell them to check their configuration.";
+    private static final String ERROR_MESSAGE_TEMPLATE_FOR_DISABLED = """
+            %s is not configured properly on this Prebid Server deploy.
+            If you believe this should work, contact the company hosting the service \
+            and tell them to check their configuration.""";
 
     private static final ObjectMapper MAPPER = new ObjectMapper()
             .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
@@ -93,7 +93,7 @@ public class BidderDepsAssembler<CFG extends BidderConfigurationProperties> {
     private List<BidderInstanceDeps> aliasesDeps() {
         return configProperties.getAliases().entrySet().stream()
                 .map(this::aliasDeps)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderInstanceDeps aliasDeps(Map.Entry<String, Object> entry) {
@@ -122,7 +122,7 @@ public class BidderDepsAssembler<CFG extends BidderConfigurationProperties> {
     private Bidder<?> bidder(CFG configProperties) {
         return configProperties.getEnabled()
                 ? bidderCreator.apply(configProperties)
-                : new DisabledBidder(String.format(ERROR_MESSAGE_TEMPLATE_FOR_DISABLED, bidderName));
+                : new DisabledBidder(ERROR_MESSAGE_TEMPLATE_FOR_DISABLED.formatted(bidderName));
     }
 
     private CFG mergeAliasConfiguration(Object aliasConfiguration, CFG coreConfiguration) {
@@ -142,9 +142,9 @@ public class BidderDepsAssembler<CFG extends BidderConfigurationProperties> {
         if (!coreAppMediaTypes.containsAll(aliasAppMediaTypes)
                 || !coreSiteMediaTypes.containsAll(aliasSiteMediaTypes)) {
 
-            throw new IllegalArgumentException(String.format(
-                    "Alias %s supports more capabilities (app: %s, site: %s) "
-                            + "than the core bidder %s (app: %s, site: %s)",
+            throw new IllegalArgumentException("""
+                    Alias %s supports more capabilities (app: %s, site: %s) \
+                    than the core bidder %s (app: %s, site: %s)""".formatted(
                     alias,
                     aliasAppMediaTypes,
                     aliasSiteMediaTypes,
