@@ -17,8 +17,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
-import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -294,7 +294,7 @@ public class OutbrainBidderTest extends VertxTest {
         // then
         final String expectedAdm = jacksonMapper.encodeToString(Response.builder()
                 .eventtrackers(null)
-                .jstracker(String.format("<script src=\"%s\"></script>", jsUrl))
+                .jstracker("<script src=\"%s\"></script>".formatted(jsUrl))
                 .imptrackers(singletonList(impUrl))
                 .build());
 
@@ -310,7 +310,7 @@ public class OutbrainBidderTest extends VertxTest {
             Function<Imp.ImpBuilder, Imp.ImpBuilder> impCustomizer) {
 
         return bidRequestCustomizer.apply(BidRequest.builder()
-                .imp(singletonList(givenImp(impCustomizer))))
+                        .imp(singletonList(givenImp(impCustomizer))))
                 .build();
     }
 
@@ -320,11 +320,11 @@ public class OutbrainBidderTest extends VertxTest {
 
     private static Imp givenImp(Function<Imp.ImpBuilder, Imp.ImpBuilder> impCustomizer) {
         return impCustomizer.apply(Imp.builder()
-                .id("123")
-                .banner(Banner.builder().w(23).h(25).build())
-                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpOutbrain.of(
-                        ExtImpOutbrainPublisher.of("testId", "testName", "testDomain"),
-                        "tagId", singletonList("testBcat"), singletonList("testBadv"))))))
+                        .id("123")
+                        .banner(Banner.builder().w(23).h(25).build())
+                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpOutbrain.of(
+                                ExtImpOutbrainPublisher.of("testId", "testName", "testDomain"),
+                                "tagId", singletonList("testBcat"), singletonList("testBadv"))))))
                 .build();
     }
 
